--- a/main.html
+++ b/main.html
@@ -8,7 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div id="sizeInfo">
+	<h1></h1>	
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
