--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="sizeInfo">
-	<h1></h1>	
+	<h1 id="heading"></h1>	
 	</div>
 	<script type="text/javascript" src="./script.js">
 </script>
